# MedChat_Project

./: .env  .env.example  .gitignore  DATA2010 - Report.md  README.md  main.py  medical_rag.py  medical_streamlit.py  pyproject.toml  report-generator.py  requirements.txt  test_qdrant.py
RAG-PIPELINE/: .env  .env.example  .gitignore  RAG_PIPELINE_ARCHITECTURE.md  RAG_PIPELINE_OVERVIEW.md  pyproject.toml  rag-main.py  rag-pipeline.md  rag_main.py
RAG-PIPELINE/api/: api.py
RAG-PIPELINE/logs/: .gitkeep
RAG-PIPELINE/modules/: config.py  embedding_qdrant.py  ocr_parser.py  splitter_metadata.py
RAG-PIPELINE/modules/utils/: file_utils.py  pipeline_logger.py  qdrant_verifier.py  translator.py
RAG-PIPELINE/prompts/: medical_info_translation_prompt.md  metadata_extract_prompt.md
RAG-PIPELINE/test/: check_dim.py  check_env.py  playground.ipynb  test_embedding_flow.py  test_file_utils.py  test_import.py  test_mistral_ocr.py  test_qdrant.py
data/: README.md
modules/: embedding_qdrant.py  ocr_parser.py  splitter_metadata.py
modules/utils/: file_utils.py  hash_utils.py  pipeline_logger.py  qdrant_verifier.py  translator.py
prompts/: metadata_extract_prompt.md
splitting_books/: fast_metadata_update.py  split_books.py
test/: qdrant_test.ipynb  quick_test.py  test_google.py  test_google_rest.py  test_httpx.py
web-ui/: .env.local  .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  supabase_session_locks.sql  supabase_setup.sql  tsconfig.tsbuildinfo
web-ui/public/: umapWorker.js
web-ui/public/locales/en/: common.json
web-ui/public/locales/vi/: common.json
web-ui/src/: react-plotly.d.ts
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/components/: DocumentCard.tsx  FileDropzone.tsx  InputArea.tsx  MessageBubble.tsx  PatientCard.tsx  RagPipelineVisualizer.tsx  SettingsModal.tsx  Sidebar.tsx  theme-provider.tsx
web-ui/src/context/: SettingsContext.tsx
web-ui/src/lib/: i18n.ts
web-ui/src/utils/: device.ts
(+31 files in other folders)
